<resources>
    <string name="app_name">FourSquare</string>
    <string name="logoImage">logoImage</string>
    <string name="filter">Filter</string>
    <string name="search">search</string>
    <string name="unFavourite">unFavourite</string>
    <string name="place_type">Indian Restaurant, Chineese Restaurant \n Italian Restaurant</string>
    <string name="overview">Overview</string>
    <string name="dummy_text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
optio, eaque rerum! Provident similique accusantium nemo autem. .</string>
    <string name="distance_text">Distance : %1$s km.</string>
    <string name="card_distance_text">• %1$s km.</string>
    <string name="date">Added May 12,2016</string>
    <string name="Email">Email</string>
    <string name="or">OR</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="_123456">123456</string>
    <string name="facebook_img">facebook_img</string>
    <string name="google_img">google_img</string>
    <string name="ryan_wilson">Ryan Wilson</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="we_have_sent_you_an_otp">We have sent you an OTP.</string>
    <string name="please_enter_it_below">Please enter it below.</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>
    <string name="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia, molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam nihil, eveniet aliquid culpa officia aut! Impedit sit sunt quaerat, odit, tenetur error, harum nesciunt ipsum debitis quas aliquid. Reprehenderit, quia. Quo neque error repudiandae fuga? Ipsa laudantium molestias eos  sapiente officiis modi at sunt excepturi expedita sint? Sed quibusdam recusandae alias error harum maxime adipisci amet laborum. Perspiciatis  minima nesciunt dolorem! Officiis iure rerum voluptates a cumque velit  quibusdam sed amet tempora. Sit laborum ab, eius fugit doloribus tenetur  fugiat, temporibus enim commodi iusto libero magni deleniti quod quam  consequuntur! Commodi minima excepturi repudiandae velit hic maxime doloremque. Quaerat provident commodi consectetur veniam similique ad  earum omnis ipsum saepe, voluptas, hic voluptates pariatur est explicabo  fugiat, dolorum eligendi quam cupiditate excepturi mollitia maiores labore  suscipit quas? Nulla, placeat. Voluptatem quaerat non architecto ab laudantium modi minima sunt esse temporibus sint culpa, recusandae aliquam numquam  totam ratione voluptas quod exercitationem fuga. Possimus quis earum veniam  quasi aliquam eligendi, placeat qui corporis!</string>
    <string name="expense">• %1$s</string>
    <string name="image_added">Added %1$s</string>
    <string name="currentLocation">Use my current location</string>
    <string name="searchArea">Select Search area on Map</string>
    <string name="near_you">Near you</string>
    <string name="top_pick">Top pick</string>
    <string name="popular">Popular</string>
    <string name="dinner">Dinner</string>
    <string name="coffee">Coffee</string>
    <string name="feedback">Feedback</string>
    <string name="favourites">Favourites</string>
    <string name="about_us">About us</string>
    <string name="logout">Logout</string>
    <string name="swaroop_kumar">Swaroop Kumar</string>
    <string name="write_review">Write Review</string>
    <string name="add_photos">Add the photos to your review</string>
    <string name="submit">Submit</string>
    <string name="write_your_feedback">Write your feedback</string>
    <string name="photos">Photos</string>
    <string name="reviews">Reviews</string>
    <string name="todo">TODO</string>
    <string name="add_review">Add Review</string>
    <string name="dummy_address">Daffodils Laximindra</string>
    <string name="dummy_street">nagar,2nd Cross udupi</string>
    <string name="no_number">No Phone number found</string>
    <string name="distance">Drive : 5km</string>
    <string name="central_cinemas">Central Cinemas</string>
    <string name="defaultRating">1.0</string>
    <string name="defaultDistance">0.0km</string>
    <string name="overall_rating">Overall Rating</string>
    <string name="how_would_you_rate_your">How would you rate your</string>
    <string name="experience">experience?</string>
    <string name="sort_by">Sort by</string>
    <string name="distanceText">Distance</string>
    <string name="rating">Rating</string>
    <string name="filter_by">Filter by</string>
    <string name="set_radius">Set Radius</string>
    <string name="rupeeSymbol">₹</string>
    <string name="rupeeSymbolx2">₹₹</string>
    <string name="rupeeSymbolX3">₹₹₹</string>
    <string name="rupeeSymbolX4">₹₹₹₹</string>
    <string name="features">Features</string>
    <string name="accept_credit_cards">Accept credit cards</string>
    <string name="delivery">Delivery</string>
    <string name="dog_freindly">Dog freindly</string>
    <string name="family_freindly_places">Family-freindly places</string>
    <string name="in_walking_distance">In Walking distance</string>
    <string name="outdoor_seating">Outdoor seating</string>
    <string name="parking">Parking</string>
    <string name="wifi">wifi</string>
    <string name="map_view">Map View</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="get_in">Get in !</string>
    <string name="email">Email</string>
    <string name="saish_balu">Saish Balu</string>
    <string name="dummy_date">June 24, 2015</string>
    <string name="dummy_review">Must try crab soup and oysters cooked in ghee!!</string>
    <string name="movie_theatre">Movie Theatre</string>
    <string name="_3_2km">3.2km</string>
    <string name="tiger_circle_manipala">Tiger circle, Manipala</string>
    <string name="mobile_number">Mobile Number</string>
</resources>