<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="#e5e5e5">

        <TextView
            android:id="@+id/tvSort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_by"
            android:textSize="@dimen/edit_textSize"
            android:textColor="#a3a3a3"
            android:fontFamily="@font/avenir_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginVertical="15dp"
            android:layout_marginStart="@dimen/content_margin"/>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:singleSelection="true"
            app:layout_constraintTop_toBottomOf="@id/tvSort"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <Button
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingVertical="15dp"
                android:textAllCaps="false"
                android:textSize="@dimen/label_textSize"
                android:text="@string/popular"
                style="@style/myButton"
                />
            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingVertical="15dp"
                android:text="@string/distanceText"
                android:textSize="@dimen/label_textSize"
                android:textAllCaps="false"
                style="@style/myButton"
                />
            <Button
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="15dp"
                android:layout_weight="1"
                android:textSize="@dimen/label_textSize"
                android:text="@string/rating"
                android:textAllCaps="false"
                style="@style/myButton"
                />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <TextView
            android:id="@+id/tvFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_by"
            android:textSize="@dimen/edit_textSize"
            android:textColor="#a3a3a3"
            android:fontFamily="@font/avenir_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toggleButton"
            app:layout_constraintBottom_toTopOf="@id/tt1"
            android:layout_marginVertical="15dp"
            android:layout_marginStart="@dimen/content_margin"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:layout_marginTop="@dimen/standardMargin"
            android:hint="@string/set_radius"
            android:background="@color/white"
            android:paddingVertical="@dimen/content_margin"
            app:boxStrokeColor="@color/textGrey"
            android:textColorHint="#a3a3a3"
            app:hintTextColor="#a3a3a3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFilter">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginHorizontal="@dimen/content_margin"
                android:textColor="@color/black"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"  />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleButtonExpense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:singleSelection="true"
            app:layout_constraintTop_toBottomOf="@id/tt1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <Button
                android:id="@+id/button11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingVertical="15dp"
                android:textAllCaps="false"
                android:textSize="@dimen/label_textSize"
                android:text="@string/rupeeSymbol"
                style="@style/myButton"
                />
            <Button
                android:id="@+id/button22"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingVertical="15dp"
                android:text="@string/rupeeSymbolx2"
                android:textSize="@dimen/label_textSize"
                android:textAllCaps="false"
                style="@style/myButton"
                />
            <Button
                android:id="@+id/button33"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="15dp"
                android:layout_weight="1"
                android:textSize="@dimen/label_textSize"
                android:text="@string/rupeeSymbolX3"
                android:textAllCaps="false"
                style="@style/myButton"
                />

            <Button
                android:id="@+id/button44"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="15dp"
                android:layout_weight="1"
                android:textSize="@dimen/label_textSize"
                android:text="@string/rupeeSymbolX4"
                android:textAllCaps="false"
                style="@style/myButton"
                />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <TextView
            android:id="@+id/tvFeature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/features"
            android:textSize="@dimen/edit_textSize"
            android:textColor="#a3a3a3"
            android:fontFamily="@font/avenir_medium"
            android:layout_marginBottom="@dimen/standardMargin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toggleButtonExpense"
            app:layout_constraintBottom_toTopOf="@+id/llFeatures"
            android:layout_marginVertical="15dp"
            android:layout_marginStart="@dimen/content_margin"/>

        <LinearLayout
            android:id="@+id/llFeatures"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFeature"
            app:layout_constraintVertical_bias="0.0">

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/myCheckbox"
                android:button="@drawable/checkbox_drawable"
                android:checked="true"
                android:layout_marginBottom="2dp"
                android:layout_marginHorizontal="@dimen/content_margin"
                android:layoutDirection="rtl"
                android:text="@string/accept_credit_cards" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#5fd3d3d3"/>


            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="2dp"
                style="@style/myCheckbox"
                android:button="@drawable/checkbox_drawable"
                android:layoutDirection="rtl"
                android:layout_marginHorizontal="@dimen/content_margin"
                android:text="@string/delivery" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#5fd3d3d3"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/myCheckbox"
                android:layout_marginBottom="2dp"
                android:button="@drawable/checkbox_drawable"
                android:layoutDirection="rtl"
                android:layout_marginHorizontal="@dimen/content_margin"
                android:text="@string/dog_freindly" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#5fd3d3d3"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/myCheckbox"
                android:layout_marginBottom="2dp"
                android:background="@color/white"
                android:button="@drawable/checkbox_drawable"
                android:layoutDirection="rtl"
                android:layout_marginHorizontal="@dimen/content_margin"
                android:text="@string/family_freindly_places" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#5fd3d3d3"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:layout_marginBottom="2dp"
                style="@style/myCheckbox"
                android:button="@drawable/checkbox_drawable"
                android:layoutDirection="rtl"
                android:layout_marginHorizontal="@dimen/content_margin"
                android:text="@string/in_walking_distance" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#5fd3d3d3"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:layout_marginBottom="2dp"
                style="@style/myCheckbox"
                android:button="@drawable/checkbox_drawable"
                android:layoutDirection="rtl"
                android:layout_marginHorizontal="@dimen/content_margin"
                android:text="@string/outdoor_seating" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#5fd3d3d3"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                style="@style/myCheckbox"
                android:layout_marginBottom="2dp"
                android:button="@drawable/checkbox_drawable"
                android:layoutDirection="rtl"
                android:layout_marginHorizontal="@dimen/content_margin"
                android:text="@string/parking" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#5fd3d3d3"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/myCheckbox"
                android:background="@color/white"
                android:button="@drawable/checkbox_drawable"
                android:layoutDirection="rtl"
                android:layout_marginHorizontal="@dimen/content_margin"
                android:layout_marginBottom="@dimen/standardMargin"
                android:text="@string/wifi" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#5fd3d3d3"/>


        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
