<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/content_margin"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/Email2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:fontFamily="@font/avenir_book"
                android:gravity="center"
                android:text="@string/email"
                android:textColor="#b5abab"
                android:textSize="@dimen/label_textSize" />

            <EditText
                android:id="@+id/Email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/avenir_book"
                android:gravity="center"
                android:inputType="textEmailAddress"
                android:text=""
                android:textColor="@color/white"
                android:textSize="@dimen/edit_textSize"
                app:backgroundTint="@color/textGrey" />

            <TextView
                android:id="@+id/mobile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standardMargin"
                android:fontFamily="@font/avenir_book"
                android:gravity="center"
                android:text="@string/mobile_number"
                android:textColor="#b5abab"
                android:textSize="@dimen/label_textSize" />

            <EditText
                android:id="@+id/mobile_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/avenir_book"
                android:gravity="center"
                android:inputType="phone"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="@dimen/edit_textSize"
                app:backgroundTint="@color/textGrey"
                tools:ignore="HardcodedText,MissingConstraints" />

            <TextView
                android:id="@+id/Password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standardMargin"
                android:fontFamily="@font/avenir_book"
                android:gravity="center"
                android:text="@string/password"
                android:textColor="#b5abab"
                android:textSize="@dimen/label_textSize" />

            <EditText
                android:id="@+id/password_entry2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/avenir_book"
                android:gravity="center"
                android:inputType="textPassword"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="@dimen/edit_textSize"
                app:backgroundTint="@color/textGrey"
                tools:ignore="HardcodedText,MissingConstraints" />

            <TextView
                android:id="@+id/confirm_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/avenir_book"
                android:gravity="center"
                android:text="@string/confirm_password"
                android:textColor="#b5abab"
                android:textSize="@dimen/label_textSize" />

            <EditText
                android:id="@+id/confirm_password_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/avenir_book"
                android:gravity="center"
                android:inputType="textPassword"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="@dimen/edit_textSize"
                app:backgroundTint="@color/textGrey"
                tools:ignore="HardcodedText,MissingConstraints" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:background="@drawable/button_border"
                android:fontFamily="@font/avenir_book"
                android:gravity="center"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:cornerRadius="@dimen/content_margin"
                tools:ignore="MissingConstraints" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>